# timekid

./: .gitignore  Cargo.toml  ISSUE_DRAFT_submicro.md  LICENSE  README.md  basic_test.py  pyproject.toml  timer.py
.github/workflows/: test.yml
benchmarks/: bench_overhead.py
src/: lib.rs
src/timekid/: __init__.py  fast.py  timer.py
tests/: _basic_test.py  fast_test.py
