[package]
name = "timekid"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Native extension for timekid (FastTimer backend)"

[lib]
name = "_fast"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }

[profile.release]
lto = true
codegen-units = 1
