[project]
name = "timekid"
version = "0.1.0"
description = "timekid - High-precision timing and profiling library for Python."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/PeterVL02/timekid"
Issues = "https://github.com/PeterVL02/timekid/issues"
